ligolang/src/test/contracts/negative/parametric_types5.mligo
type ('a,'a) foo = 'a * 'a